Rooms: get-метод получения информации о комнате
